[gd_scene load_steps=12 format=3 uid="uid://flui25l5hfkd"]

[ext_resource type="Script" path="res://scripts/game/cards/peasant_card.gd" id="1_kc0oj"]
[ext_resource type="FontFile" uid="uid://cqxld14ctgocv" path="res://assets/fonts/MedulaOne.ttf" id="2_p2tky"]
[ext_resource type="Texture2D" uid="uid://dffc6xevcshxc" path="res://assets/gui/Society_Sheet.png" id="3_2ywy3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vk5qw"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.0784314, 0.4, 0.356863, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_gep78"]
Panel/styles/panel = SubResource("StyleBoxFlat_vk5qw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xnvf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hp31"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lkh7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8o8ag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7foac"]
bg_color = Color(0.611765, 0.952941, 0.780392, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_30qi8"]
Button/styles/disabled = SubResource("StyleBoxEmpty_8xnvf")
Button/styles/focus = SubResource("StyleBoxEmpty_8hp31")
Button/styles/hover = SubResource("StyleBoxEmpty_lkh7f")
Button/styles/normal = SubResource("StyleBoxEmpty_8o8ag")
Button/styles/pressed = SubResource("StyleBoxFlat_7foac")

[node name="Peasant_Card" type="Panel"]
custom_minimum_size = Vector2(345, 420)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1080.0
offset_right = -615.0
offset_bottom = -660.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = SubResource("Theme_gep78")
script = ExtResource("1_kc0oj")

[node name="Peasant_Card" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.5
offset_top = 25.0
offset_right = 137.5
offset_bottom = 395.0
grow_horizontal = 2

[node name="Peasant_Card_Vbox" type="VBoxContainer" parent="Peasant_Card"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Peasant_Header" type="Label" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 70
text = "Peasantry"
horizontal_alignment = 1

[node name="Peasant_TopDivider" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.0784314, 0.4, 0.356863, 1)

[node name="Peasant_Label1" type="Label" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "line1line1line1line1li"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Peasant_Label2" type="Label" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "line2line2line2line2li"
horizontal_alignment = 1

[node name="Peasant_Label3" type="Label" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "line3line3line3line3li"
horizontal_alignment = 1

[node name="Peasant_BotDivider" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.0784314, 0.4, 0.356863, 1)

[node name="Peasant_Rows" type="VBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox"]
layout_mode = 2

[node name="Row_Top" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows"]
layout_mode = 2
alignment = 1

[node name="S1" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top"]
layout_mode = 2
alignment = 1

[node name="Symbol_Holder" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S1"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="S1_Symbol" type="Sprite2D" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S1"]
position = Vector2(23, 28)
texture = ExtResource("3_2ywy3")
hframes = 5
vframes = 4

[node name="S1_Modifier" type="Label" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "(+00%)"
horizontal_alignment = 1

[node name="S2" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top"]
layout_mode = 2
alignment = 1

[node name="Symbol_Holder" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S2"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="S2_Symbol" type="Sprite2D" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S2"]
position = Vector2(23, 28)
texture = ExtResource("3_2ywy3")
hframes = 5
vframes = 4

[node name="S2_Modifier" type="Label" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Top/S2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "(+00%)"
horizontal_alignment = 1

[node name="Row_Bot" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows"]
layout_mode = 2
alignment = 1

[node name="S3" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot"]
layout_mode = 2
alignment = 1

[node name="Symbol_Holder" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S3"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="S3_Symbol" type="Sprite2D" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S3"]
position = Vector2(23, 28)
texture = ExtResource("3_2ywy3")
hframes = 5
vframes = 4

[node name="S3_Modifier" type="Label" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "(+00%)"
horizontal_alignment = 1

[node name="S4" type="HBoxContainer" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot"]
layout_mode = 2
alignment = 1

[node name="Symbol_Holder" type="ColorRect" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S4"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="S4_Symbol" type="Sprite2D" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S4"]
position = Vector2(23, 28)
texture = ExtResource("3_2ywy3")
hframes = 5
vframes = 4

[node name="S4_Modifier" type="Label" parent="Peasant_Card/Peasant_Card_Vbox/Peasant_Rows/Row_Bot/S4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0784314, 0.4, 0.356863, 1)
theme_override_fonts/font = ExtResource("2_p2tky")
theme_override_font_sizes/font_size = 50
text = "(+00%)"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(345, 420)
layout_mode = 0
offset_right = 328.0
offset_bottom = 404.0
theme = SubResource("Theme_30qi8")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
